testsuite/poke.pkl/for-diag-1.pk
/* { dg-do compile } */

for (var s = "foo";
     s + "bar"; /* { dg-error "invalid condition.*\n.*expected boolean" } */
    ) {}
